--- a/index.html
+++ b/index.html
@@ -33,24 +33,24 @@
                 <i class="fa-solid fa-play"></i>
             </div>
           </a>
-          <a href="games/vex7/">
-            <img src="images/vex7.jpeg">
+          <a href="games/Minecraft/">
+            <img src="images/mc.png">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
             </div>
           </a>
         </div>
         <div class="row">
-          <a href="games/vex6">
-            <img src="images/vex6.jpeg">
+          <a href="games/slope">
+            <img src="images/slope.jpg">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
             </div>
           </a>
         </div>
         <div class="row">
-          <a href="games/drive-mad/">
-            <img src="images/drive-mad.jpg">
+          <a href="games/retro-bowl/">
+            <img src="images/retro-bowl.jpg">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
             </div>
@@ -63,8 +63,8 @@
                 <i class="fa-solid fa-play"></i>
             </div>
           </a>
-          <a href="games/retro-bowl/">
-            <img src="images/retro-bowl.jpg">
+          <a href="games/drive-mad/">
+            <img src="images/drive-mad.jpg">
             <div class="play-button">
                 <i class="fa-solid fa-play"></i>
             </div>
@@ -87,7 +87,7 @@
         <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
         <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
       <a href="games/vex5/"><img src="/games/vex-5/vex.jpeg" alt="vex 5"></a>
-        <a href="games/"><img src="images/mc.png" alt="minecraft"></a>
+        <a href="games/Minecraft"><img src="images/mc.png" alt="minecraft"></a>
         <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
         <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
         <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
