--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
         <a href="games/drift-hunters/"><img src="games/drift-hunters/drift-hunters.png" alt="drift-hunters"></a>
       <a href="games/fnw/"><img src="images/fnaw.png" alt="FNAW"></a>
+      <a href="games/csgo-clicker/"><img src="images/cs-go.png" alt="CSGOCLICKER"></a>
       <a href="games/blockpost/"><img src="images/blockpost.jpeg" alt="Blockpost"></a>
     </div>
     </div>
