--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <a href="games/blockpost/"><img src="images/blockpost.jpeg" alt="Blockpost"></a>
     </div>
     </div>
-  <h2>Gemstone Network</h2>
+  <h2>Pencil Network</h2>
     <center/>
       
 </body>
