--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <img src="images/Game.png" alt="logo">
-        <h1>Game Pilot</h1>
+        <h1>Guess Whos Back? - Sancentral</h1>
     </nav>
   <center/>
     <br/>
@@ -22,10 +22,10 @@
     <br/>
     <br/>
     <br/>
-     <h1 style="color:white;">At Game Pilot, games is our priority for your satisfacation</h1>
+     <h1 style="color:white;">A gift to sticking to sancentral. Guess whos back.</h1>
 
     <div class="featured">
-        <h1>Popular:</h1>
+        <h1>Best Games:</h1>
         <div class="column">
           <a href="games/bob-the-robber-2/">
             <img src="images/bob-the-robber-2.png">
