--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <nav>
         <img src="images/Game.png" alt="logo">
         <h1>Guess Whos Back? - Sancentral</h1>
+        <script type="text/javascript" src="https://www.stat-counter.org/count/duvv"></script><br>
+ <a href='https://www.easybooking.eu/produkte/julia-hotelsoftware'>Hotelprogramm Buchungssystem</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=5e9c45a06dbad18c36f19f0a7bed2cf61e912024'></script>
     </nav>
   <center/>
     <br/>
