--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <img src="images/Game.png" alt="logo">
+        <img src="images/game.png" alt="logo">
         <h1>Guess Whos Back? - Sancentral</h1>
         <script type="text/javascript" src="https://www.stat-counter.org/count/duvv"></script><br>
  <a href='https://www.easybooking.eu/produkte/julia-hotelsoftware'>Hotelprogramm Buchungssystem</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=5e9c45a06dbad18c36f19f0a7bed2cf61e912024'></script>
@@ -101,7 +101,7 @@
       <a href="games/blockpost/"><img src="images/blockpost.jpeg" alt="Blockpost"></a>
     </div>
     </div>
-  <h2>Pencil Network</h2>
+  <h2>Game Request? Email bb18876@wps.k12.vaus</h2>
     <center/>
       
 </body>
