--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
       <a href="games/vex5/"><img src="/games/vex-5/vex.jpeg" alt="vex 5"></a>
         <a href="games/Minecraft"><img src="images/mc.png" alt="minecraft"></a>
+        <a href="games/TMS2"><img src="images/download (1).jfif" alt="minecraft"></a>
         <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
         <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
         <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
