--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
         <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
         <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
         <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
+        <a href="games/SH/"><img src="images/hot.jpg" alt="slope"></a>
+        <a href="games/SM64/"><img src="images/logo.png" alt="slope"></a>
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
         <a href="games/drift-hunters/"><img src="games/drift-hunters/drift-hunters.png" alt="drift-hunters"></a>
       <a href="games/fnw/"><img src="images/fnaw.png" alt="FNAW"></a>
