--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
     <div id="games">
         <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
+        <a href="games/DGM2/"><img src="images/thumb.jpg" alt="Doge Miner 2"></a>
         <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
         <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
       <a href="games/vex5/"><img src="/games/vex-5/vex.jpeg" alt="vex 5"></a>
@@ -94,8 +95,8 @@
         <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
         <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
         <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
-        <a href="games/SH/"><img src="images/hot.jpg" alt="slope"></a>
-        <a href="games/SM64/"><img src="images/logo.png" alt="slope"></a>
+        <a href="games/SH/"><img src="images/hot.jpg" alt="Super Hot"></a>
+        <a href="games/SM64/"><img src="images/logo.png" alt="Super Mario 64"></a>
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
         <a href="games/drift-hunters/"><img src="games/drift-hunters/drift-hunters.png" alt="drift-hunters"></a>
       <a href="games/fnw/"><img src="images/fnaw.png" alt="FNAW"></a>
