--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
     <div id="games">
         <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
+        <a href="games/BS/"><img src="images/basketball-stars.png" alt="Basketball Stars"></a>
         <a href="games/DGM2/"><img src="images/thumb.jpg" alt="Doge Miner 2"></a>
         <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
         <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
