--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
         <a href="games/Minecraft"><img src="images/mc.png" alt="minecraft"></a>
         <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
         <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
+        <a href="games/RTS/"><img src="images/RTS.png" alt="Rooftop Snipers"></a>
         <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
         <a href="games/slope/"><img src="images/slope.jpg" alt="slope"></a>
         <a href="games/SH/"><img src="images/hot.jpg" alt="Super Hot"></a>
