--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
     <div id="games">
         <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
         <a href="games/BS/"><img src="images/basketball-stars.png" alt="Basketball Stars"></a>
+        <a href="games/blockpost/"><img src="images/blockpost.jpeg" alt="Blockpost"></a>
         <a href="games/DGM2/"><img src="images/thumb.jpg" alt="Doge Miner 2"></a>
+        <a href="games/BR3D/"><img src="images/splash.jpg" alt="Backrooms 3D"></a>
+        <a href="games/csgo-clicker/"><img src="images/cs-go.png" alt="CSGOCLICKER"></a>
         <a href="games/vex7/"><img src="images/vex7.jpeg" alt="vex 7"></a>
         <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
       <a href="games/vex5/"><img src="/games/vex-5/vex.jpeg" alt="vex 5"></a>
@@ -102,8 +105,6 @@
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
         <a href="games/drift-hunters/"><img src="games/drift-hunters/drift-hunters.png" alt="drift-hunters"></a>
       <a href="games/fnw/"><img src="images/fnaw.png" alt="FNAW"></a>
-      <a href="games/csgo-clicker/"><img src="images/cs-go.png" alt="CSGOCLICKER"></a>
-      <a href="games/blockpost/"><img src="images/blockpost.jpeg" alt="Blockpost"></a>
     </div>
     </div>
   <h2>Game Request? Email bb18876</h2>
