--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <a href="games/SH/"><img src="images/hot.jpg" alt="Super Hot"></a>
         <a href="games/SM64/"><img src="images/logo.png" alt="Super Mario 64"></a>
         <a href="games/motox3m2/"><img src="images/motox3m2.jpg" alt="moto x3m2"></a>
-        <a href="games/MKM/"><img src="images/MKM.jpg" alt="Monkey Mart"></a>
+        <a href="games/MKM/"><img src="images/MKM.png" alt="Monkey Mart"></a>
         <a href="games/drift-hunters/"><img src="games/drift-hunters/drift-hunters.png" alt="drift-hunters"></a>
       <a href="games/fnw/"><img src="images/fnaw.png" alt="FNAW"></a>
     </div>
