--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inbox - Gmail (304)</title>
+    <title>Chrome Web Store</title>
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.0/css/all.css">
 </head>
 <body>
     <nav>
         <img src="images/game.png" alt="logo">
-        <h1>Guess Whos Back? - Sancentral</h1>
+        <h1>MathForKids</h1>
         <script type="text/javascript" src="https://www.stat-counter.org/count/duvv"></script><br>
- <a href='https://www.easybooking.eu/produkte/julia-hotelsoftware'>Hotelprogramm Buchungssystem</a> <script type='text/javascript' src='https://www.whomania.com/ctr?id=5e9c45a06dbad18c36f19f0a7bed2cf61e912024'></script>
     </nav>
   <center/>
     <br/>
@@ -24,7 +23,7 @@
     <br/>
     <br/>
     <br/>
-     <h1 style="color:white;">A gift to sticking to sancentral. Guess whos back.</h1>
+     <h1 style="color:white;">Schools a bozo, couldnt even block this.</h1>
 
     <div class="featured">
         <h1>Best Games:</h1>
@@ -108,7 +107,7 @@
       <a href="games/fnw/"><img src="images/fnaw.png" alt="FNAW"></a>
     </div>
     </div>
-  <h2>Game Request? Email bb18876</h2>
+  <h2>Game Request? Email riot</h2>
     <center/>
       
 </body>
