--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
     <div id="games">
         <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
+        <a href="games/P2/"><img src="images/P2.png" alt="PaperIo 2"></a>
         <a href="games/BS/"><img src="images/basketball-stars.png" alt="Basketball Stars"></a>
         <a href="games/blockpost/"><img src="images/blockpost.jpeg" alt="Blockpost"></a>
         <a href="games/DGM2/"><img src="images/thumb.jpg" alt="Doge Miner 2"></a>
