--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <a href="games/vex6/"><img src="images/vex6.jpeg" alt="vex 6"></a>
       <a href="games/vex5/"><img src="/games/vex-5/vex.jpeg" alt="vex 5"></a>
         <a href="games/Minecraft"><img src="images/mc.png" alt="minecraft"></a>
+        <a href="games/AU"><img src="images/red.png" alt="Amongus"></a>
         <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
         <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
         <a href="games/NSP/"><img src="images/GAG.jpg" alt="Noob Steve Parkour"></a>
