--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
         <a href="games/AU"><img src="images/red.png" alt="Amongus"></a>
         <a href="games/moto-x3m/"><img src="images/moto-x3m.jpg" alt="moto x3m"></a>
         <a href="games/retro-bowl/"><img src="images/retro-bowl.jpg" alt="retrobowl"></a>
+        <a href="games/MCB/"><img src="images/MCS.png" alt="Minecraft Beta"></a>
         <a href="games/NSP/"><img src="images/GAG.jpg" alt="Noob Steve Parkour"></a>
         <a href="games/RTS/"><img src="images/RTS.png" alt="Rooftop Snipers"></a>
         <a href="games/drive-mad/"><img src="images/drive-mad.jpg" alt="drive mad"></a>
