--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <a href="games/P2/"><img src="images/P2.png" alt="PaperIo 2"></a>
         <a href="games/BS/"><img src="images/basketball-stars.png" alt="Basketball Stars"></a>
         <a href="games/blockpost/"><img src="images/blockpost.jpeg" alt="Blockpost"></a>
+        <a href="games/FB/"><img src="images/FB.png" alt="Flappy Bird"></a>
         <a href="games/BL/"><img src="images/Bl.png" alt="Bitlife"></a>
         <a href="games/DGM2/"><img src="images/thumb.jpg" alt="Doge Miner 2"></a>
         <a href="games/BR3D/"><img src="images/splash.jpg" alt="Backrooms 3D"></a>
