--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <br/>
     <br/>
     <br/>
-     <h1 style="color:white;">Schools a bozo, couldnt even block this.</h1>
+     <h1 style="color:white;">MATH STUDI ON TOP!!!!11!11!!</h1>
 
     <div class="featured">
-        <h1>Best Games:</h1>
+        <h1>Popular:</h1>
         <div class="column">
           <a href="games/bob-the-robber-2/">
             <img src="images/bob-the-robber-2.png">
@@ -86,6 +86,7 @@
 
     <div id="games">
         <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
+         <a href="games/HW/"><img src="images/HW.png" alt="Happy Wheels"></a>
         <a href="games/P2/"><img src="images/P2.png" alt="PaperIo 2"></a>
         <a href="games/BS/"><img src="images/basketball-stars.png" alt="Basketball Stars"></a>
         <a href="games/blockpost/"><img src="images/blockpost.jpeg" alt="Blockpost"></a>
