--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <h1 style="color:white;">MATH STUDI ON TOP!!!!11!11!!</h1>
 
     <div class="featured">
-        <h1>Popular:</h1>
+        <h1>Featured Games:</h1>
         <div class="column">
           <a href="games/bob-the-robber-2/">
             <img src="images/bob-the-robber-2.png">
@@ -71,6 +71,12 @@
                 <i class="fa-solid fa-play"></i>
             </div>
           </a>
+             <a href="games/JF/">
+            <img src="images/JF.jpg">
+            <div class="play-button">
+                <i class="fa-solid fa-play"></i>
+            </div>
+          </a>
         </div>
         </div>
     </div>
@@ -89,6 +95,7 @@
          <a href="games/HW/"><img src="images/HW.png" alt="Happy Wheels"></a>
         <a href="games/P2/"><img src="images/P2.png" alt="PaperIo 2"></a>
         <a href="games/BS/"><img src="images/basketball-stars.png" alt="Basketball Stars"></a>
+         <a href="games/JF/"><img src="images/JF.jpg" alt="Just Fall"></a>
         <a href="games/blockpost/"><img src="images/blockpost.jpeg" alt="Blockpost"></a>
         <a href="games/FB/"><img src="images/FB.png" alt="Flappy Bird"></a>
         <a href="games/BL/"><img src="images/Bl.png" alt="Bitlife"></a>
