--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <img src="images/game.png" alt="logo">
+        <img src="images/icon.png" alt="logo">
         <h1>MathForKids</h1>
          <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1411ddc5360744d6f2af5a1603d0275b0130d76c'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1150085/t/0"></script>
