--- a/index.html
+++ b/index.html
@@ -122,6 +122,11 @@
       <a href="games/fnw/"><img src="images/fnaw.png" alt="FNAW"></a>
     </div>
     </div>
+        <hr>
+      <h1 style="color:white;">Pr0xy/Apps
+          <a href="games/UV/"><img src="images/UV.png" alt="UltraVIolet"></a>
+      </h1>
+      
   <h2>Game Request? Email riot</h2>
     <center/>
       
