--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     </div>
     </div>
         <hr>
-      <h1 style="color:white;">Pr0xy/Apps
+      <h1 style="color:white;">Unl0cers/Apps
           <a href="games/UV/"><img src="images/UV.png" alt="UltraVIolet"></a>
       </h1>
       
