--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
         <hr>
       <h1 style="color:white;">Unl0cers/Apps
-          <a href="games/UV/"><img src="images/UV.png" alt="UltraVIolet"></a>
+          <a href="games/YTU/"><img src="images/YT.png" alt="Youtube unblcer"></a>
       </h1>
       
   <h2>Game Request? Email riot</h2>
