--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <a href="games/MKM/"><img src="images/MKM.png" alt="Monkey Mart"></a>
         <a href="games/drift-hunters/"><img src="games/drift-hunters/drift-hunters.png" alt="drift-hunters"></a>
       <a href="games/fnw/"><img src="images/fnaw.png" alt="FNAW"></a>
-        <a href="games/N/"><img src="images/slope.jpg" alt="Now GG Byp@ss"></a>
+        <a href="games/N/old-ngg-bypass-main"><img src="images/slope.jpg" alt="Now GG Byp@ss"></a>
     </div>
     </div>
         <hr>
