--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
 
     <div id="games">
         <a href="games/bob-the-robber-2/"><img src="images/bob-the-robber-2.png" alt="bob the robber 2"></a>
+        <a href="games/SMH/"><img src="images/SM.jpg" alt="Stickman Hook"></a>
          <a href="games/HW/"><img src="images/HW.png" alt="Happy Wheels"></a>
         <a href="games/P2/"><img src="images/P2.png" alt="PaperIo 2"></a>
         <a href="games/BS/"><img src="images/basketball-stars.png" alt="Basketball Stars"></a>
