--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chrome Web Store</title>
+    <title>i-Ready</title>
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.0/css/all.css">
 </head>
 <body>
     <nav>
         <img src="images/icon.png" alt="logo">
-        <h1>MathForKids</h1>
-         <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=1411ddc5360744d6f2af5a1603d0275b0130d76c'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1150085/t/0"></script>
+        <h1>History Einstein - Thanks For 5K Views!</h1>
+         <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src=' <a href='http://www.freevisitorcounters.com'>Freevisitorcounters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=9df54dde4532fe161d2abc0abef94bde1a5e40de'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1176282/t/0"></script>">
     </nav>
   <center/>
     <br/>
@@ -24,10 +24,10 @@
     <br/>
     <br/>
     <br/>
-     <h1 style="color:white;">MATH STUDI ON TOP!!!!11!11!!</h1>
+     <h1 style="color:white;">Free History Videos!</h1>
 
     <div class="featured">
-        <h1>Featured Games:</h1>
+        <h1>Featured G*mes:</h1>
         <div class="column">
           <a href="games/bob-the-robber-2/">
             <img src="images/bob-the-robber-2.png">
@@ -129,7 +129,7 @@
           <a href="games/YTU/"><img src="images/YTU.png" alt="Youtube unblcer"></a>
       </h1>
       
-  <h2>Game Request? Email riot</h2>
+  <h2>Please dont tell your teacher</h2>
     <center/>
       
 </body>
