--- a/index.html
+++ b/index.html
@@ -121,11 +121,10 @@
         <a href="games/MKM/"><img src="images/MKM.png" alt="Monkey Mart"></a>
         <a href="games/drift-hunters/"><img src="games/drift-hunters/drift-hunters.png" alt="drift-hunters"></a>
       <a href="games/fnw/"><img src="images/fnaw.png" alt="FNAW"></a>
-        <a href="games/N/old-ngg-bypass-main"><img src="images/slope.jpg" alt="Now GG Byp@ss"></a>
     </div>
     </div>
         <hr>
-      <h1 style="color:white;">Unl0cers/Apps
+      <h1 style="color:white;">@pps
           <a href="games/YTU/"><img src="images/YTU.png" alt="Youtube unblcer"></a>
       </h1>
       
