--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <hr>
       <h1 style="color:white;">@pps
           <a href="games/YTU/"><img src="images/YTU.png" alt="Youtube unblcer"></a>
-          <a href="games/Mathsearcher/"><img src="images/SIzwq1sP4Y.png" alt="Histoxy"></a>
+          <a href="https://mathworkpleasenow.netlify.app/"><img src="images/google.png" alt="Proxy"></a>
       </h1>
       
   <h2>Please dont tell your teacher</h2>
